--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "merge-greenkeeper-prs",
-  "version": "1.0.0",
+  "version": "0.0.0-development",
   "description": "Load Greenkeeper PRs from your notifications, merge the green ones and remove notifications",
   "main": "index.js",
   "bin": {
@@ -18,5 +18,8 @@
   "dependencies": {
     "@octokit/core": "^2.2.0",
     "@octokit/plugin-paginate-rest": "^1.1.1"
+  },
+  "devDependencies": {
+    "semantic-release": "^17.0.1"
   }
 }
